fix text overflowing from contextmenu

--- a/module/styles/better-entity-link.css
+++ b/module/styles/better-entity-link.css
@@ -1,4 +1,5 @@
 a.entity-link.context > nav#context-menu {
+    width: auto !important;
     text-align: left !important;
     text-shadow: none !important;
     color: #FFF !important;
